--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,12 @@
 
+@import "component/status-bar.css";
+
+@import "screen/homeScreen.css";
 @import "screen/loginScreen.css";
 
 @import "variable.css";
 @import "reset.css";
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
 
 body{
@@ -11,5 +14,10 @@ body{
 }
 
 button{
+    font-family: 'Open Sans', sans-serif;
+}
+
+
+.index-main__logo-text{
     font-family: 'Open Sans', sans-serif;
 }
