--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 @import "screen/home-screen.css";
 @import "screen/login-screen.css";
 @import "screen/find-screen.css";
+@import "screen/notice-screen.css";
 
 @import "variable.css";
 @import "reset.css";
@@ -13,6 +14,11 @@
 
 body{
     font-family: 'Open Sans', sans-serif;
+}
+
+.viewport{
+    font-family: 'Open Sans', sans-serif;
+
 }
 
 button{
