--- a/css/variable.css
+++ b/css/variable.css
@@ -16,6 +16,32 @@ body {
     border-radius: 30px;
 }
 
+@keyframes hideSplashScreen {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+.loading-animation {
+    margin-top: 50px;
+    height: 812px;
+    width: 375px;
+    border: none;
+    background-color: #141414;
+    border-radius: 30px;
+    position: absolute;
+    top: 0;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    animation: hideSplashScreen 0.4s ease-in-out forwards;
+    animation-delay: 2s;
+}
+
 .viewport__home {
     background-color: white;
 }
